# proton_rally

./: Cargo.toml
assets/game/: arena_properties.ron
assets/sprites/: rally_spritesheet.ron
assets/textures/: rally_spritesheet.ron
config/: bindings_controller.ron  display_config.ron  input.ron
src/: main.rs  state.rs
src/components/: arena.rs  camera_ortho.rs  cooldown.rs  hitbox.rs  mass.rs  mod.rs  movable.rs  player.rs  power.rs  shield.rs  weapon.rs
src/entities/: arena.rs  camera.rs  mod.rs  player.rs  weapon_fire.rs
src/resources/: mod.rs  shield_power_sprites.rs  sprites_textures.rs  weapon_fire.rs  weapon_fire_sprites.rs
src/systems/: aim_weapon.rs  aim_weapon_shield.rs  camera_tracking.rs  fire_weapon.rs  hitbox_collision.rs  hitbox_immovables_collision.rs  mod.rs  move_player.rs  move_weapon_fire.rs  player_systems.rs
