[package]
name = "proton_rally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
log = {version = "0.4.8", features = ["serde"]}
nalgebra = "0.20"
ncollide2d = "0.22"
assert_approx_eq = "1.1.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]