[package]
name = "proton_rally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = {version = "0.4.8", features = ["serde"]}
env_logger = "0.9"
nalgebra = "0.31"
ncollide2d = "0.33"
assert_approx_eq = "1.1.0"
serde = { version = "1", features = ["derive"] }
ron = "0.5"
sdl2 = "0.33"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
sdl_controller = ["amethyst/sdl_controller"]